Fixed issue on Safari

--- a/index.css
+++ b/index.css
@@ -57,7 +57,6 @@
   vertical-align: middle;
 }
 .header__additional-element {
-  flex: 0;
   order: 4;
 }
 
